fix clipping

--- a/css/social-media.css
+++ b/css/social-media.css
@@ -62,37 +62,37 @@
 
 .provisional .newicon.facebook {
   background: url("https://test.canada.ca/canada-child-benefit-2/validation/GCWeb/images/facebook.png") no-repeat;
-  height: 36px;
-  width: 36px;
+  height: 38px;
+  width: 38px;
   background-size: cover;
   display: block;
 }
 
 .provisional .newicon.twitter {
   background: url("https://test.canada.ca/canada-child-benefit-2/validation/GCWeb/images/twitter.png") no-repeat;
-  height: 36px;
-  width: 36px;
+  height: 38px;
+  width: 38px;
   background-size: cover;
   display: block;
 }
 .provisional .newicon.youtube {
   background: url("https://test.canada.ca/canada-child-benefit-2/validation/GCWeb/images/youtube.png") no-repeat;
-  height: 36px;
-  width: 36px;
+  height: 38px;
+  width: 38px;
   background-size: cover;
   display: block;
 }
 .provisional .newicon.instagram {
   background: url("https://test.canada.ca/canada-child-benefit-2/validation/GCWeb/images/instagram.png") no-repeat;
-  height: 36px;
-  width: 36px;
+  height: 38px;
+  width: 38px;
   background-size: cover;
   display: block;
 }
 .provisional .newicon.linkedin {
   background: url("https://test.canada.ca/canada-child-benefit-2/validation/GCWeb/images/instagram.png") no-repeat;
-  height: 36px;
-  width: 36px;
+  height: 38px;
+  width: 38px;
   background-size: cover;
   display: block;
 }
